# dobby-db

./: .gitignore  .history  Cargo.toml  README.md
config/: catalog.toml
src/client-cli/: Cargo.toml
src/client-cli/src/: main.rs
src/client_cli/: Cargo.toml
src/client_cli/src/: main.rs
src/common/base/: Cargo.toml
src/common/base/src/: config_key.rs  error.rs  lib.rs
src/common/catalog/: Cargo.toml
src/common/catalog/src/: catalog.rs  catalog_config.rs  glue_catalog.rs  glue_schema.rs  glue_table.rs  iceberg_catalog.rs  iceberg_schema.rs  iceberg_table.rs  lib.rs
src/common/catalog/src/table_format/: external_table.rs  mod.rs  table.rs
src/server/: Cargo.toml
src/server/src/: main.rs
src/server/src/flight/: flight_sql_server.rs  mod.rs
src/server/src/parser/: mod.rs  parser.rs  statement.rs
src/server_cli/: .history  Cargo.toml
src/server_cli/src/: main.rs
