[package]
name = "dobby-db"
version = "0.1.0"
edition = "2024"

[workspace]
resolver="2"
members = [
    "src/client-cli",
    "src/server"
]


[workspace.dependencies]
arrow-flight = { version = "55.2.0", features = ["cli","flight-sql","tls"] }
tokio = { version = "1.46.0", features = ["macros", "rt", "rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["transport", "codegen", "prost"] }
arrow = "55.2.0"
arrow-array = "55.2.0"
arrow-cast = "55.2.0"
arrow-schema = "55.2.0"

[dependencies]
