[package]
name = "dobbydb-client-cli"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "dobbydb-client-cli"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.98"
clap = { workspace = true }
futures = { workspace = true }
tonic = { workspace = true }
tracing-log = "0.2.0"
tokio = { workspace = true }
tracing-subscriber = "0.3.19"
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-flight = { workspace = true }
arrow-cast = { workspace = true }
arrow-schema = { workspace = true }
