[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio = {workspace = true}
arrow-flight = {workspace = true}
tonic = {workspace = true}
futures = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }