[package]
name = "dobbydb-server"
version = {workspace = true}
edition = {workspace = true}

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio = {workspace = true}
arrow-flight = {workspace = true}
tonic = {workspace = true}
futures = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
prost = "0.13.5"