[package]
name = "dobbydb-common-catalog"
version = {workspace = true}
edition = {workspace = true}

[dependencies]
toml = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
dobbydb-common-base = {workspace = true}
datafusion = {workspace = true}
async-trait = {workspace = true}
aws-sdk-glue = "1.110.0"
aws-config = "1.8.3"
iceberg = "0.6.0"
iceberg-datafusion = "0.6.0"
futures = "0.3.31"